--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.cdemo"
-        minSdk 28
+        minSdk 27
         targetSdk 31
         versionCode 1
         versionName "1.0"
@@ -45,5 +45,8 @@ dependencies {
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'me.tankery.lib:circularSeekBar:1.3.2'
+    implementation 'club.cred.android:synth:1.0.0'
+    implementation 'com.airbnb.android:lottie:4.2.0'
+
 
 }
